--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-router-dom": "^7.3.0",
+    "swiper": "^11.2.5",
     "tailwindcss": "^4.0.12",
     "use-mask-input": "^3.4.2"
   },
